--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
             <div class="health-hero__inner">
               <div class="health-hero__left">
                 <h1 class="health-hero__title has_word_anim" data-on-scroll="0" data-stagger="0.2" data-duration="1.5">
-                  I’m Aloka <br> Your Health <br> Coach <a href="#">Based in <br>
-                    California</a></h1>
+                  I’m aswathi <br> Your Health <br> Coach <a href="#">Based in <br>
+                    Kerala</a></h1>
                 <div class="cf_text health-hero__text has_fade_anim pb-10 pt-35" data-on-scroll="0">
                   <p>Happy clients have been boost their health</p>
                 </div>
