--- a/index.html
+++ b/index.html
@@ -1086,23 +1086,23 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
 <!-- Swiper.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.0.5/swiper-bundle.min.js"></script>
+<script src="assets/js/swiper-bundle.min.js"></script>
 
 <!-- GSAP (GreenSock Animation Platform) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="assets/js/gsap.min.js"></script>
 
 <!-- GSAP Plugins -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollSmoother.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/SplitText.min.js"></script>
+
+<script src="assets/js/ScrollSmoother.min.js"></script>
+<script src="assets/js/ScrollToPlugin.min.js"></script>
+<script src="assets/js/ScrollTrigger.min.js"></script>
+<script src="assets/js/SplitText.min.js"></script>
 
 <!-- TweenMax -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+<script src="assets/js/TweenMax.min.js"></script>
 
 <!-- MeanMenu -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.mmenu/8.5.26/jquery.mmenu.min.js"></script>
-
+<script src="assets/js/jquery.meanmenu.min.js"></script>
   <!-- <script src="../assets/js/jquery.magnific-popup.min.js"></script> -->
   <!-- <script src="../assets/js/counter.js"></script> -->
   <!-- <script src="../assets/js/typed.js"></script> -->
@@ -1110,11 +1110,11 @@
   <!-- <script src="../assets/js/progressbar.js"></script> -->
   <!-- <script src="../assets/js/beforeafter.jquery-1.0.0.min.js"></script> -->
   <!-- <script src="../assets/js/basictable.min.js"></script> -->
-  <script src="../assets/js/backToTop.js"></script>
-  <script src="../assets/js/main.js"></script>
-  <script src="../assets/js/error-handling.js"></script>
-  <script src="../assets/js/offcanvas.js"></script>
-  <script src="../assets/js/wc-cursor.js"></script>
+  <script src="assets/js/backToTop.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/error-handling.js"></script>
+  <script src="assets/js/offcanvas.js"></script>
+  <script src="assets/js/wc-cursor.js"></script>
 
 
 </body>
