--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
 
 
         <!-- Video area start -->
-        <div class="video__full health-video">
+        <!-- <div class="video__full health-video">
           <video src="https://wealcoder.com/dev/video/yoga.mp4" autoplay="" loop="" muted=""></video>
-        </div>
+        </div> -->
         <!-- Video area end -->
 
 
