--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
         <!-- Fitness section start -->
-        <!-- <section class="health-fitness__area pt-130 pb-140">
+        <section class="health-fitness__area pt-130 pb-140">
           <div class="health-container">
             <div class="health-fitness__inner zi-1">
               <div class="sec-title-wrap pb-60">
@@ -259,7 +259,7 @@
           <div class="cf_image health-fitness__leaf">
             <img class="leaf" src="../assets/imgs/health/leaf.png" alt="Leaf" data-speed="0.7">
           </div>
-        </section> -->
+        </section>
         <!-- Fitness section end -->
 
 
