--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="INFO HTML5 Template">
+  <meta name="description" content="Aswathi - Nutritionist">
 
-  <title>Home - Health Coach</title>
+  <title>Home - Nutritionist</title>
 
   <!-- Fav Icon -->
   <link rel="icon" type="image/x-icon" href="../assets/imgs/logo/favicon.png">
@@ -200,7 +200,7 @@
 
 
         <!-- Fitness section start -->
-        <section class="health-fitness__area pt-130 pb-140">
+        <!-- <section class="health-fitness__area pt-130 pb-140">
           <div class="health-container">
             <div class="health-fitness__inner zi-1">
               <div class="sec-title-wrap pb-60">
@@ -259,7 +259,7 @@
           <div class="cf_image health-fitness__leaf">
             <img class="leaf" src="../assets/imgs/health/leaf.png" alt="Leaf" data-speed="0.7">
           </div>
-        </section>
+        </section> -->
         <!-- Fitness section end -->
 
 
