--- a/index.html
+++ b/index.html
@@ -376,68 +376,76 @@
 
 
         <!-- Text Slider area start -->
-        <!-- <div class="health-textslider__area">
+        <div class="health-textslider__area">
 
           <div class="health__textslider has_fade_anim">
             <div class="swiper text__slider" data-sliderSpeed="20000" data-autoPlay="true">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">content</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Personalized Nutrition Plans</h2>
+                            <img src="assets/img/meal.svg" alt="Icon" width="32">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h3 class="title">Health Advisor & Wellness Coach</h3>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Nutritional Insights</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Healthy Lifestyle Guidance</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Weight Management</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Holistic Wellness</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Nutritional Research & Education</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Meal Planning Expertise</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h3 class="title">(Health Advisor & Coach)</h3>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">News</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">Research</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
-        </div> -->
+        </div>
+        
+        </div>
         <!-- Text Slider area end -->
 
 
         <!-- Gallery section start -->
-        <!-- <section class="health-gallery__area pt-120 pb-140">
+       <section class="health-gallery__area pt-120 pb-140">
           <div class="health-gallery__inner">
             <div class="sec-title-wrap">
               <h2 class="sec-title-17 has_text_reveal_anim">Shape of nature and <br> herbal teas!</h2>
@@ -477,16 +485,16 @@
           <div class="cf_image health-gallery__leaf">
             <img src="../assets/imgs/health/leaf-5.png" alt="Leaf Image" data-speed="0.8">
           </div>
-        </section>  -->
+        </section> 
         <!-- Gallery section end -->
 
 
         <!-- Testimonial section start -->
-        <!-- <section class="health-testimonial__area pt-150 pb-150">
+         <section class="health-testimonial__area pt-150 pb-150">
           <div class="container">
             <div class="health-testimonial__slider-wrap">
               <div class="cf_image mb-55">
-                <img src="../assets/imgs/health/quote.png" alt="Quote Image">
+                <img src="assets/img/quote.svg" alt="Quote Image" width="50">
               </div>
 
               <div class="swiper creator-testimonial__slider">
@@ -546,27 +554,27 @@
 
               <div class="health-testimonial__arrow">
                 <div class="btn-next has_fade_anim" data-fade-from="right">
-                  <img src="../assets/imgs/health/arrow-left.png" alt="Icon">
+                  <img src="assets/img/left-arrow.svg" alt="Icon">
                 </div>
                 <div class="btn-prev has_fade_anim" data-fade-from="left">
-                  <img src="../assets/imgs/health/arrow-right.png" alt="Icon">
+                  <img src="assets/img/right-arrow.svg" alt="Icon">
                 </div>
               </div>
             </div>
           </div>
 
           <div class="cf_image health-testimonial__image">
-            <img src="../assets/imgs/health/t3.png" alt="Image" data-speed="0.85">
+            <img src="assets/img/testimonial-3.jpg" alt="Image" data-speed="0.85">
           </div>
 
           <div class="cf_image health-testimonial__image-2">
-            <img src="../assets/imgs/health/t2.png" alt="Image" data-speed="1.2">
+            <img src="assets/img/testimonial-2.jpg" alt="Image" data-speed="1.2">
           </div>
 
           <div class="cf_image health-testimonial__image-3">
-            <img src="../assets/imgs/health/t1.png" alt="Image" data-speed=".8">
+            <img src="assets/img/testimonial-1.jpg" alt="Image" data-speed=".8">
           </div>
-        </section> -->
+        </section>
         <!-- Testimonial section end -->
 
 
