--- a/index.html
+++ b/index.html
@@ -448,42 +448,42 @@
        <section class="health-gallery__area pt-120 pb-140">
           <div class="health-gallery__inner">
             <div class="sec-title-wrap">
-              <h2 class="sec-title-17 has_text_reveal_anim">Shape of nature and <br> herbal teas!</h2>
+              <h2 class="sec-title-17 has_text_reveal_anim">Empowering Health Through Nutrition: Highlights from Our Programs</h2>
             </div>
 
             <div class="health-gallery__flex">
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.5">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g1.png" alt="Thumbnail">
+                  <img src="assets/img/gallery-3.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Body Shape <br> Phase</h3>
+                <h3 class="health-gallery__title">Diet for pregnancy <br> and lactation</h3>
               </div>
 
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.65">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g2.png" alt="Thumbnail">
+                  <img src="assets/img/gallery-2.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Knee foot <br> down</h3>
+                <h3 class="health-gallery__title">JPEF conference</h3>
               </div>
 
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.8">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g3.png" alt="Thumbnail">
+                  <img src="assets/img/gallery-1.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Health bulk <br> Cased</h3>
+                <h3 class="health-gallery__title">follow a healthy balanced  <br> diet in busy schedule</h3>
               </div>
 
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.95">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g4.png" alt="Thumbnail">
+                  <img src="assets/img/gallery-4.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Masta <br> Misconeriya</h3>
+                <h3 class="health-gallery__title">Campaign conducted as <br> part of World Breastfeeding <br> Week celebrations</h3>
               </div>
             </div>
           </div>
 
           <div class="cf_image health-gallery__leaf">
-            <img src="../assets/imgs/health/leaf-5.png" alt="Leaf Image" data-speed="0.8">
+            <img src="assets/img/bowl.png" alt="Leaf Image" data-speed="0.8" width="120">
           </div>
         </section> 
         <!-- Gallery section end -->
@@ -501,52 +501,35 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide has_fade_anim">
                     <div class="health-testimonial__slide">
-                      <p>I am employed by the fitness industry and have chronic foot and knee issues. This admitted
-                        skeptic is amazed at the results I have had with this product. If you using for business is
-                        growing fast and many advantage. Besides that with axtra it can help you maximize product
-                        distribution</p>
-                      <h3 class="client-name">Mukkher Halk</h3>
-                      <h4 class="client-role">Marketing manager</h4>
+                      <p>I really want to thank my dietitian aswathy mam. I have lost over 17 kgs. I started with 72 kg and now I am 55kg which is my ideal weight. I have tried many dietplans and exercises even before but none of them worked for me as it worked with my weightloss with your guidance.i have got great diet advice from you as well as very quick response to all my doubts regarding weightloss. I am truly satisfied with the result.</p>
+                      <h3 class="client-name">Sruthy Palakkad</h3>
                     </div>
                   </div>
                   <div class="swiper-slide has_fade_anim">
                     <div class="health-testimonial__slide">
-                      <p>I am employed by the fitness industry and have chronic foot and knee issues. This admitted
-                        skeptic is amazed at the results I have had with this product. If you using for business is
-                        growing fast and many advantage. Besides that with axtra it can help you maximize product
-                        distribution </p>
-                      <h3 class="client-name">Mukkher Halk</h3>
-                      <h4 class="client-role">Marketing manager</h4>
+                      <p>I lost 6 kgs through this diet and workout plan by diet world. Im really happy and satisfied with the results because this was very easy to follow and a correct follow up was done. And also, having more healthy and nutritious food and working out has became a part of my life. Instead of a short term plan this helped me to reduce weight in a consistent manner and maintain a healthy lifestyle. Thankyou mam.</p>
+                      <h3 class="client-name">Gopika</h3>
                     </div>
                   </div>
                   <div class="swiper-slide has_fade_anim">
                     <div class="health-testimonial__slide">
-                      <p>I am employed by the fitness industry and have chronic foot and knee issues. This admitted
-                        skeptic is amazed at the results I have had with this product. If you using for business is
-                        growing fast and many advantage. Besides that with axtra it can help you maximize product
-                        distribution </p>
-                      <h3 class="client-name">Mukkher Halk</h3>
-                      <h4 class="client-role">Marketing manager</h4>
+                      <p>I completed my one month journey with aswathy and now when I am discontinuing I am totally satisfied how her diet plan wired for me.. I lost 3 and half kg and for someone like me who have a very hard time to show some difference in scale that was soo great... Thank u aswathy for ur persistence and guidance ..</p>
+                      <h3 class="client-name">Fathima</h3>
                     </div>
                   </div>
                   <div class="swiper-slide has_fade_anim">
                     <div class="health-testimonial__slide">
-                      <p>I am employed by the fitness industry and have chronic foot and knee issues. This admitted
-                        skeptic is amazed at the results I have had with this product. If you using for business is
-                        growing fast and many advantage. Besides that with axtra it can help you maximize product
-                        distribution </p>
-                      <h3 class="client-name">Mukkher Halk</h3>
-                      <h4 class="client-role">Marketing manager</h4>
+                      <p>I successfully completed my one month journey with aswathi chechi... And i lost 4 kg....
+                        Thank you Aswathi chechi for your guidance.. I am satisfied with your diet plan & workout ..thank
+                        you chechi</p>
+                      <h3 class="client-name">Adithya</h3>
                     </div>
                   </div>
                   <div class="swiper-slide has_fade_anim">
                     <div class="health-testimonial__slide">
-                      <p>I am employed by the fitness industry and have chronic foot and knee issues. This admitted
-                        skeptic is amazed at the results I have had with this product. If you using for business is
-                        growing fast and many advantage. Besides that with axtra it can help you maximize product
-                        distribution </p>
-                      <h3 class="client-name">Mukkher Halk</h3>
-                      <h4 class="client-role">CEO, Admand</h4>
+                      <p>My journey with Diet World has been an incredible one. My goal was not just to lose weight but also to reduce my belly fat. From being 58 kg, I achieved my ideal weight of 56 kg, which matches my height, and along with that, my belly fat reduced by 90%.
+                        Thank you so much, Aswathi, for your diet plan and workout guidance!</p>
+                      <h3 class="client-name">Athulya</h3>
                     </div>
                   </div>
                 </div>
@@ -629,93 +612,32 @@
         <!-- Blog section end -->
 
 
-        <!-- Brand section start -->
-        <!-- <div class="health-partner__area mbm-1">
-          <div class="health-container">
-            <div class="swiper brand_logo_slider" data-autoPlay="true" data-sliderSpeed="6000">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-01.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-01-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-02.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-02-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-03.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-03-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-04.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-05-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-05.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-05-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-07.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-07-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-06.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-07-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-04.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-05-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-        <!-- Brand section end -->
-
-
-
 
         <!-- Journey section start -->
-        <!-- <section class="health-journey__area">
+        <section class="health-journey__area">
           <div class="health-container">
             <div class="health-journey__inner">
               <div class="health-journey__left">
                 <h2 class="sec-title-17 has_text_reveal_anim">It’s time <br> to start your <br> journey</h2>
               </div>
               <div class="health-journey__mid cf_image">
-                <img src="../assets/imgs/health/arrow-lg.png" alt="Icon">
+                <img src="assets/img/cta-arrow.png" alt="Icon">
               </div>
               <div class="health-journey__right">
                 <div class="cf_btn price__btn health-journey__btn">
-                  <a href="#" class="wc-btn-primary btn-hover-cropping">Get started
+                  <a href="https://wa.me/9544550036?text=Hello!%20I%20am%20interested%20in%20your%20services.%20Here%20are%20my%20details:%0A%0AName:%20[Enter%20your%20name]%0APhone:%20[Enter%20your%20phone]%0AAge:%20[Enter%20your%20age]%0AWeight:%20[Enter%20your%20weight]%0AHeight:%20[Enter%20your%20height]" class="wc-btn-primary btn-hover-cropping">Get started
                     <i class="fa-solid fa-chevron-right"></i>
                   </a>
-                  <div class="price">$12</div>
+                  
                 </div>
 
                 <div class="cf_image health-journey__offer">
-                  <img src="../assets/imgs/health/offer.png" alt="Image">
+                  <img src="assets/img/bowl.png" alt="Image" width="150">
                 </div>
               </div>
             </div>
           </div>
-        </section> -->
+        </section>
         <!-- Journey section end -->
 
 
