--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 
 
         <!-- FAQ section start -->
-        <!-- <section class="health-faq__area pt-140 pb-140">
+        <section class="health-faq__area pt-140 pb-140">
           <div class="container">
             <div class="row">
               <div class="col-xxl-12">
@@ -657,18 +657,14 @@
                       <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                           data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          <span>Q.</span> How do I know if I need a dietary supplement
+                          <span>Q.</span> How can I book a consultation?
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <span>a. </span>
-                          <p>Many products are marketed as dietary supplements, and it is important to remember that
-                            supplements include not only vitamins and minerals, but also herbs and other botanicals,
-                            probiotics, fish oil, other substances. However, dietary supplements are not intended to
-                            treat, diagnose, mitigate, prevent, or cure disease. In some cases, dietary supplements
-                            may have unwanted effects especially.</p>
+                          <p>You can easily book a consultation through the Contact section of the website. Simply fill out the form with your details, and we’ll get back to you promptly.</p>
                         </div>
                       </div>
                     </div>
@@ -677,16 +673,14 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                           data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                           <span>Q.</span>
-                          When attorney will gave me a notice?
+                          Do you provide personalized meal plans?
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <span>a. </span>
-                          <p>Over the years of practice, we have learned to calculate the steps of opponents, act
-                            ahead
-                            of the curve and, as a result, comprehensively solve the task for the risk.</p>
+                          <p>Yes, all meal plans are tailored to meet your specific health goals, lifestyle, and dietary preferences.</p>
                         </div>
                       </div>
                     </div>
@@ -695,16 +689,14 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                           data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                           <span>Q.</span>
-                          Who can help me with rent?
+                          Can I access your services online?
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <span>a. </span>
-                          <p>Over the years of practice, we have learned to calculate the steps of opponents, act
-                            ahead
-                            of the curve and, as a result, comprehensively solve the task for the risk.</p>
+                          <p>Absolutely! I offer both in-person and virtual consultations to make it convenient for clients worldwide.</p>
                         </div>
                       </div>
                     </div>
@@ -713,16 +705,14 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                           data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
                           <span>Q.</span>
-                          Did I have eviction the care act?
+                          What types of health goals can you help with?
                         </button>
                       </h2>
                       <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <span>a. </span>
-                          <p>Over the years of practice, we have learned to calculate the steps of opponents, act
-                            ahead
-                            of the curve and, as a result, comprehensively solve the task for the risk.</p>
+                          <p>I specialize in weight management, improving overall wellness, addressing specific health conditions, and creating sustainable eating habits. Let’s work together on your journey to better health!</p>
                         </div>
                       </div>
                     </div>
@@ -743,12 +733,12 @@
           <div class="cf_image health-faq__leaf-2">
             <img src="../assets/imgs/health/leaf-8.png" alt="Leaf Image" data-speed="1.3">
           </div>
-        </section> -->
+        </section>
         <!-- FAQ section end -->
 
 
         <!-- Instagram section start -->
-        <!-- <div class="health-instagram__area">
+        <div class="health-instagram__area">
           <div class="health-container">
             <div class="health-instagram__inner">
               <div class="sec-title-wrap pb-65">
@@ -787,7 +777,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div> 
         <!-- Instagram section end -->
 
 
@@ -795,7 +785,7 @@
 
 
       <!-- Footer section start -->
-      <!-- <footer class="health-footer__area">
+      <footer class="health-footer__area">
         <div class="health-footer__top">
           <div class="health-container">
             <div class="health-footer__top-wrap">
@@ -849,7 +839,7 @@
         <div class="cf_image health-footer__flower">
           <img src="../assets/imgs/health/flower.png" alt="Flower Image" data-speed=".75">
         </div>
-      </footer> -->
+      </footer>
       <!-- Footer section end -->
 
 
